@@ -2,6 +2,13 @@ package settlementexpansion.listener;
 
 import necesse.engine.GameEventListener;
 import necesse.engine.events.players.DamageTileEvent;
+import necesse.entity.DamagedObjectEntity;
+import necesse.entity.TileDamageType;
+import necesse.entity.mobs.PlayerMob;
+import necesse.entity.mobs.ai.behaviourTree.leaves.HumanAngerTargetAINode;
+import necesse.entity.mobs.friendly.human.HumanMob;
+import necesse.level.gameObject.*;
+import necesse.level.maps.LevelObject;
 import necesse.level.maps.layers.SettlementLevelLayer;
 import necesse.level.maps.levelData.settlementData.SettlementLevelData;
 import settlementexpansion.SettlementExpansion;
@@ -18,6 +25,30 @@ public class DamageTileSettlementListener extends GameEventListener<DamageTileEv
                 SettlementModData layerData = SettlementModData.getSettlementModDataCreateIfNonExist(event.level);
                 if (!layer.doesClientHaveAccess(event.client) && !layerData.isPvpFlagged) {
                     event.preventDefault();
+                }
+            }
+            if (SettlementExpansion.getSettings().enableHumansGetAngryOnBreakOrSteal) {
+                PlayerMob player = event.client.playerMob;
+                if (!event.isPrevented() && player != null && (event.level.biome.hasVillage() || data != null) && event.type == TileDamageType.Object) {
+                    DamagedObjectEntity objectDamage = event.level.entityManager.getDamagedObjectEntity(event.tileX, event.tileY);
+                    GameObject object = event.level.getObject(event.tileX, event.tileY);
+                    LevelObject master = object.isMultiTileMaster() ? null : object.getMultiTile(event.level, event.tileX, event.tileY).getMasterLevelObject(event.level, event.tileX, event.tileY).orElse(null);
+
+                    if (objectDamage != null && master == null) {
+                        if (!(object instanceof TreeObject) && !(object instanceof SingleRockObject) && !(object instanceof SingleRockSmall) && !(object instanceof GrassObject)) {
+                            int damage = objectDamage.objectDamage + event.damage;
+                            if (damage >= object.objectHealth) {
+                                player.getLevel().entityManager.mobs.getInRegionByTileRange(player.getX() / 32, player.getY() / 32, 25).stream().filter((m) -> {
+                                    return m instanceof HumanMob && !m.isSameTeam(player);
+                                }).forEach((m) -> {
+                                    HumanAngerTargetAINode<?> humanAngerHandler = (HumanAngerTargetAINode<?>)m.ai.blackboard.getObject(HumanAngerTargetAINode.class, "humanAngerHandler");
+                                    if (humanAngerHandler != null) {
+                                        humanAngerHandler.addEnemy(player, 20F);
+                                    }
+                                });
+                            }
+                        }
+                    }
                 }
             }
         }
